2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-regexp-unified)
	(tramp-completion-file-name-regexp-unified): On W32 systems, do
	not regard the volume letter as remote filename.  (Bug#5447)
	(tramp-open-shell): New defun.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use it.

2010-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command)
	(tramp-get-ls-command-with-dired): Run tests on "/dev/null"
	instead of "/".

2010-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Trace 'quit.
	(tramp-open-connection-setup-interactive-shell): Apply
	workaround for IRIX64 bug.  Move argument of last
	`tramp-send-command' where it belongs to.

2010-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes): Don't pass "$3".
	(tramp-maybe-open-connection): Use `async-args' and `gw-args' in
	front of `login-args'.

2010-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command-with-dired): Make test for
	"--dired" stronger.

2010-07-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Don't use hard-wired
	"/bin/sh" but `tramp-remote-sh' from `tramp-methods'.
	(tramp-find-shell): Simplify setting connection property.
	(tramp-get-ls-command): Make test for "--color=never" stronger.

2010-07-11  Magnus Henoch  <magnus.henoch@gmail.com>

	* tramp-gvfs.el (tramp-gvfs-handle-copy-file): Do not pass empty
	argument to gvfs-copy.

2010-06-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-process-environment): Protect version
	string by apostroph.
	(tramp-shell-prompt-pattern): Do not use a shy group in case of
	XEmacs.
	(tramp-file-name-for-operation): Add `call-process-region'.
	(tramp-set-process-query-on-exit-flag): Fix wrong parentheses.

	* tramp-compat.el (top): Do not autoload